template practise is fully completed

--- a/go_templates/templates/tpl_complexStructs.gohtml
+++ b/go_templates/templates/tpl_complexStructs.gohtml
@@ -10,7 +10,7 @@
 	    {{range $index, $element := $data}}
 			<ul>
 				<li> ID - {{$element.ID}} </li>
-				<li> Full Name - {{$element.First}} {{$element.Last}} </li>
+				<li> Full Name - {{$element.First}} {{toUpper $element.Last}} </li>
 				<li> Age - {{$element.Age}} </li>
 	   		</ul>
 		{{end}}
